--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -7,14 +7,14 @@ class="btn btn-outline-danger">Regresar</button>
 
 <div class="row animated fadeIn fast">
   <div class="col-md-12">
-    <form>
+    <form (ngSubmit)="guardar()" #forma="ngForm">
 
       <div class="form-group">
         <label>
           Nombre
         </label>
-        <input
-        type="text" name=""
+        <input [(ngModel)]="heroe.nombre"
+        type="text" name="nombre"
         class="form-control"
         placeholder="nombre del heroe"
         required
@@ -25,7 +25,9 @@ class="btn btn-outline-danger">Regresar</button>
           <label>
             Casa
           </label>
-         <select class="form-control" name="">
+         <select [(ngModel)]="heroe.casa"
+         name="casa"
+         class="form-control" name="casa">
           <option value="Marvel">Marvel</option>
           <option value="DC">DC</option>
          </select>
@@ -36,7 +38,8 @@ class="btn btn-outline-danger">Regresar</button>
               Bio
             </label>
             <textarea
-            type="text" name=""
+            [(ngModel)]="heroe.bio"
+            type="text" name="bio"
             class="form-control"
 
             required>
@@ -46,7 +49,8 @@ class="btn btn-outline-danger">Regresar</button>
           </div>
 
           <div class="form-group">
-             <button type="submit" name="button" class="btn btn-outline-primary">
+             <button [disabled]="!forma.valid"
+             type="submit" name="button" class="btn btn-outline-primary">
               Guardar Cambios
              </button>
 
