--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -1,6 +1,9 @@
 <h3>Heroe <small>Nombre....</small></h3>
 <button [routerLink]="['/heroes']"
 class="btn btn-outline-danger">Regresar</button>
+&nbsp;
+<button (click)="agregarNuevo(forma)"
+class="btn btn-outline-success">Nuevo Heroe</button>
 <hr>
 
 
