--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -23,7 +23,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Casa</th>
-                <th scope="col">Opciones</th>
+                <th scope="col" class="text-right">Opciones</th>
               </tr>
             </thead>
             <tbody>
@@ -31,7 +31,17 @@
                   <td>{{i+1}}</td>
                   <td>{{heroes[k].nombre}}</td>
                   <td>{{heroes[k].casa}}</td>
-                  <td></td>
+                  <td class="text-right">
+                    <button [routerLink]="['/heroe',k]"
+                    type="button" class="btn btn-outline-success">
+                      Editar
+                     </button>
+                     &nbsp;
+                     <button (click)="borraHeroe(k)"
+                    type="button" class="btn btn-outline-danger">
+                      Eliminar
+                     </button>
+                  </td>
 
               </tr>
 
