--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -1,4 +1,4 @@
-<h3>Heroe <small>Nombre....</small></h3>
+<h3>Heroe <small>{{heroe.nombre}}</small></h3>
 <button [routerLink]="['/heroes']"
 class="btn btn-outline-danger">Regresar</button>
 &nbsp;
