--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -49,7 +49,16 @@
             </tbody>
 
       </table>
+      <div *ngIf="(heroes |keys).length===0 && !loading"
+       class="alert alert-info" role="alert">
+        <strong>No hay </strong>registros que mostrar
 
+      </div>
+      <div *ngIf="loading"
+       class="alert alert-warning" role="alert">
+        <strong>Cargando... </strong>por favor espere
+
+      </div>
 
     </div>
 
